5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1798_2571.log
== TEST (2019-06-10 19:15:02) 
-- CODE:
sa = input("string:") .split(',')

for i in range(size(sa)):
	if(sa[i] == "a"):
		print(sa - sa[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    for i in range(size(sa)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:15:39) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(sa[i] == "a"):
		print(sa - sa[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sa[i] == "a"):
TypeError: list indices must be integers or slices, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:16:16) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		print(sa - i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sa[i] == "a"):
TypeError: list indices must be integers or slices, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:16:22) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		print(sa - i)
-- EXECUTION TIME:
1.0928
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:

-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:

-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:16:22) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		print(sa - i)
-- EXECUTION TIME:
1.38157
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:

-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:

-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:16:25) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		print(sa - i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(sa[i] == "a"):
TypeError: list indices must be integers or slices, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:17:11) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		s = sa - i
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:18:35) 
-- CODE:
sa = input("string:") .split(',')
s = 
for i in sa:
	if(i == "a"):
		s = sa - i
print(s)
-- ERROR:
File "XXXX", line 2
    s = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:18:43) 
-- CODE:
sa = input("string:") .split(',')

for i in sa:
	if(i == "a"):
		s = sa - i
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(s)
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:01:49) 
-- CODE:
from numpy

sa = input("string:") 
letra = " "
for i in len(sa):
	if(i != "a" and i != "A"):
		letra = letra + i
	print(letra)
-- ERROR:
File "XXXX", line 1
    from numpy
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:01:57) 
-- CODE:
from numpy import*

sa = input("string:") 
letra = " "
for i in len(sa):
	if(i != "a" and i != "A"):
		letra = letra + i
	print(letra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:03:04) 
-- CODE:
from numpy import*

sa = input("string:") 
letra = ''
for i in sa:
	if(i != 'a' and i != 'A'):
		letra = letra + i
	print(letra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:03:26) 
-- CODE:
from numpy import*

sa = input("string:") 
letra = ''
for i in sa:
	if(i != 'a' and i != 'A'):
		letra = letra + i
print(letra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:03:41) 
-- CODE:
from numpy import*

sa = input("string:") 
letra = ''
for i in sa:
	if(i != 'a' and i != 'A'):
		letra = letra + i
print(letra)
-- EXECUTION TIME:
1.13116
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
